--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/react-dom": "^16.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2"
   },
@@ -43,9 +45,6 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react-router-dom": "^5.1.5",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.3",
-    "jest": "^26.4.2",
-    "jest-puppeteer": "^4.4.0",
-    "puppeteer": "^5.2.1"
+    "enzyme-adapter-react-16": "^1.15.3"
   }
 }
